--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
@@ -61,6 +62,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/logo.jpg
+    - images/clear.jpg
+    - images/rain.jpg
+    - images/snow.jpg
+    - images/clouds.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
